--- a/doc/04zakljucak.tex
+++ b/doc/04zakljucak.tex
@@ -1,2 +1,23 @@
 \chapter{Zaključak}\label{zakljucak}
-Zaključak
+Kao konačni rezultat rada realizovana je web aplikacija za polaganje testova od strane studenata i administraciju testova od strane profesora. Studentima se ovim omogućava polaganje testova u hodu, a profesorima lakše ocenjivanje i izrada novih testova.
+
+Izrađeni sistem ima svega oko 2000 linija koda, od čega je 1500 linija Clojure izvornog koda, raspoređenih u 9 fajlova. Modularan je, tako da se lako nadograđuje. Lako se kompajlira, pakuje i distribuira, ili kao \textit{standalone} aplikacija ili kao kontejner za web server. Ceo projekat je okačen na \textit{GitHub}-u na adresi \url{https://github.com/dimitrijer/formlogic}. Izvorni kod je objavljen pod Eclipse javnom licensom, te predstavlja softver otvorenog koda.
+
+Autor je veoma zadovoljan krajnjim rezultatom, imajući u vidu da mu je to prvi projekat pisan u Clojure jeziku. Funkcionalno programiranje nudi jedan sasvim drugačiji aspekat u odnosu na OOP paradigmu. Potrebno je neko vreme kako bi odviklo od pisanja sekvencijalnog koda, sa kontrolnim strukturama kojima se kontroliše tok izvršavanja, sa eksplicitnim iteriranjem, klasama, promenljivama, stanjem objekata itd. Autoru je najteže bilo da se liši koncepta perzistentnog stanja. Međutim, nakon nekog vremena počinju da se ukazuju neke prednosti funkcionalnog programiranja. Čiste funkcije postaju izuzetno moćan alat za enkapsulaciju i apstrakciju. Komponovanjem ovakvih funkcija uz pomoć elementarnih operacija \texttt{map}, \texttt{reduce}, \texttt{apply}, \texttt{comp}, \texttt{partial}, \texttt{threading} makroa itd. moguće je postići izuzetno kompleksne operacije, a opet zadržati čitljivost koda, i jasno odvojene odgovornosti na nivou funkcija. Clojure kolekcije (vektori, liste, rečnici, setovi) su izuzetno zgodne za rad. Iako svaka operacija nad kolekcijama vraća novu kolekciju, one su veoma performantne, zahvaljujući optimizacijama ispod haube, te se prilikom pisanja koda uopšte ne obraća pažnja na \textit{garbage collection}. \textit{Lazy} sekvence, koje se realizuju samo kada se pristupa elementima, omogućavaju apstraktne termine poput beskonačnih nizova, ili beskonačnih poziva funkcija. Rekurzija takođe postaje moćno oružje: Clojure ima podršku za \textit{tail recursion} pomoću \texttt{recur} operacije, pa nema bojazni od prekoračenja steka. Kako su sve vrednosti \textit{immutable}, to programer većinu vremena ne mora da razmišlja o mehanizmima sinhronizacije. Kada je neophodno obezbediti atomičnost nad dodelom vrednosti, postoje proste CAS (\textit{compare and set}) primitive zvane atomi.
+
+Autor želi da napomene da još uvek nije imao dovoljno prakse da bi stekao jasnu percepciju svih prednosti i mana ovakvog koncepta programiranja. Takođe, postoje koncepti u Clojure jeziku koje autor nije imao prilike da upotrebi: multimetode (dispečovanje na osnovu tipa argumenta), protokoli (slični interfejsima), rekordi (strukture podataka), makroi (veoma moćan koncept koji omogućava manipulisanje samim elementima jezika, tj. samo-modifikovanje koda), transakcije (implementacija \textit{Software Transactional Memory} sistema svojstvena Clojure-u, koja obezbeđuje korektnost i konzistentnost podataka prilikom obrade od strane više niti) itd. Jedno je sigurno, a to je da se autor veoma raduje budućem radu u ovom programskom jeziku.
+
+Postoji značajan broj aspekata aplikacije koji bi se u budućnosti mogli unaprediti:
+\begin{itemize}
+\item Korisnički interfejs za unos novih testova. Jedini način dodavanja novih testova trenutno jeste preko SQL upita, što je dosta nezgodno jer zahteva pristup serveru i pristup bazi. Ovaj način dodavanja ispita je takođe podložan greškama.
+\item Vremensko ograničenje za izradu testa. Studentima je trenutno omogućeno da počnu sa izradom testa, i da sama izrada traje neodređeno dugo. Jedno od bitnijih unapređenja sistem jeste da se postavi vremenski rok za polaganje testa, koji bi se prikazivao studentima dok odgovaraju na pitanja, i nakon koga bi se test automatski predao, tj. završio. Osim vremenskog intervala u kome je neophodno predati test, bilo bi zgodno definisati i vremenski period u kome je polaganje testa uopšte moguće, na primer za vreme ispitnih ili kolokvijumskih rokova.
+\item Administracija grupa studenata. Ovim bi se omogućilo raspoređivanje studenata po arbitrarnim grupama, na primer, po predmetu. Neki testovi bi mogli da se polažu samo od strane studenata koji pripadaju određenoj grupi. Grupe bi mogle da označavaju i studentske godine, te bi student mogao da bude član i više različitih grupa. Studenti bi mogli da zahtevaju da budu primljeni u grupu, ili bi moglo da se implementira automatsko dodavanje studenata u neke grupe, na primer na osnovu broja indeksa iz email naloga. Još jedan benefit grupisanja studenata je lakše pregledanje testova.
+\item Paginacija za rezultate testova. Trenutno se svi testovi prikazuju na istoj stranici, čak iako se vrati veliki broj rezultata. Unapređenje predstavlja implementacija paginacije, sa recimo 50 rezultata po stranici.
+\item Podrška za \textit{Secure Socket Layer} protokol. Korisnici se loguju na sistem tako što šalju email nalog i lozinku kao deo \texttt{POST} zahteva kao \texttt{urlencoded} parametri obrasca. Prostim \textit{sniff}-ovanjem mrežnog saobraćaja moguće je prikupiti sve kredencijale tokom procesa logovanja, i to iskoristiti za lažnu autentikaciju. Na Ring serveru je relativno lako omogućiti OpenSSL podršku, tako da je sav saobraćaj između korisnika i sajta enkriptovan. Time bi se kanal komunikacije sasvim dovoljno osigurao. Za ovu funkcionalnost bi trebalo obezbediti validan sertifikat izdat od strane priznatog autoriteta za sertifikate.
+\item Bolji heš algoritam za skladištenje lozinki. Ukoliko bi maliciozno lice dobilo pristup bazi, moglo bi sa lakoćom da izvrši \textit{brute force} napad, i da sa dovoljno velikim rečnikom uspe da dođe do lozinki drugih korisnika, zajedno sa email nalozima. Trenutno se za skladištenje lozinki koristi \texttt{MD5} heš vrednost lozinke. Time što bi se koristila bolja funkcija za heširanje, na primer \texttt{SHA256}, ili \texttt{bcrypt}, značajno bi se umanjio rizik od ovakve vrste napada. Takođe, treba imati u vidu da je ovakvu vrstu napada moguće izvršiti i bez upada u bazu, tako što bi se slao veliki broj login zahteva ka serveru. Ovaj rizik se može umanjiti ograničavanjem ukupnog broja zahteva u nekom vremenskom intervalu po sesiji.
+\item Opciono pamćenje sesije u kolačićima na određeno vreme. Ova funkcionalnost, poznatija kao \textit{remember me}, omogućava korisnicima da se samo jednom uloguju na sistem, tj. da ne moraju da unose email i lozinku svaki put. Zbog bezbednosnih razloga je potrebno implementirati i vremensko ograničenje, tj. zastarivanje sesije. Trenutno se na sistem može ulogovati jednom, i ostati neodređeno dugo ulogovan, tj. do trenutka kada se korisnik ručno odjavi ili do kada se restartuje server. Ukoliko korisnik isključi opciju \textit{remember me}, npr. na deljenim računarima, sistem bi automatski izlogovao korisnika čim zatvori stranicu u pregledaču.
+\item Skalarno ocenjivanje odgovora. Trenutno se odgovori mogu označiti kao tačni, ili kao netačni. Često se dešava da profesor proceni da je student delimično odgovorio na pitanje. Stoga je neophodno omogućiti profesoru da oceni odgovor sa određenim brojem poena. Ovim bi se takođe otvorila mogućnost definisanja broja poena po pitanju, tj. neka pitanja bi mogla da vrede manje, a neka više poena.
+\item Nove funkcionalnosti sistema za baratanje logičkim jednačinama. Ovde se misli na implementacije različitih strategija zaključivanja.
+\end{itemize}
+
+Na kraju, autor želi da izrazi zahvalnost mentorima na razumevanju vannastavnih obaveza autora, i svu pomoć tokom izrade rada.
