--- a/doc/main.tex
+++ b/doc/main.tex
@@ -26,6 +26,7 @@
 }}
 \usepackage{listings} % Code listings.
 \input{clj-latex.tex}
+\input{js-latex.tex} 
 \lstset{
     captionpos=b,
     basicstyle=\ttfamily\scriptsize,
