--- a/doc/main.tex
+++ b/doc/main.tex
@@ -62,7 +62,7 @@
 \centering
 \includegraphics[width=0.4\textwidth]{etf}\par
 \vspace{1cm}
-{\scshape\Huge Izrada web aplikacije za polaganje testova znanja \par}
+{\scshape\Huge Izrada veb aplikacije za polaganje testova znanja \par}
 \vspace{0.5cm}
 {\scshape\Large Development of web application for taking exams \par}
 \vspace{1cm}
@@ -78,6 +78,17 @@ Mentori: \hfill & \itshape Boško Nikolić, PhD \\
 {Elektrotehnički fakultet, Univerzitet u Beogradu \par}
 \today
 \end{titlepage}
+
+% ============
+% Thank-you page
+% ============
+\cleardoublepage
+\topskip0pt
+\vspace*{\fill}
+\begin{center}
+\textit{Autor želi da izrazi zahvalnost mentorima na razumevanju vannastavnih obaveza autora, i svu pomoć tokom izrade rada.}
+\end{center}
+\vspace*{\fill}
 
 % ===
 % TOC
