Move some references from footnotes to bibliography

--- a/doc/01zahtevi.tex
+++ b/doc/01zahtevi.tex
@@ -153,25 +153,25 @@ Izrađena veb aplikacija se sastoji od dva snažno spregnuta dela: \emph{fronten
 \paragraph{Rutiranje}
 Ring API je previše jednostavan za neke iole ozbiljnije zahteve, te je zbog toga nastao \emph{Compojure}\cite{compojure}, koji je \textit{routing} biblioteka za Clojure. Jednostavno rečeno, ova biblioteka prosleđuje određene HTTP zahteve (\texttt{GET}, \texttt{POST} itd.) za URI putanjama (tj. resursima) hendlerima koji ih obrađuju. Tako je, na primer, moguće napraviti hendler koji vraća početnu stranicu ukoliko se ka serveru uputi HTTP \texttt{GET} zahtev za \texttt{/index.html} resursom. Međutim, \texttt{POST} zahtevi ka istom resursu će biti odbijeni sa statusom \texttt{403 Forbidden}. Ovaj postupak uparivanja resursa i hendlera se naziva rutiranje.
 
-\paragraph{Šabloni} Server generiše HTML stranice na upit pomoću mašine za šablone (\textit{template engine}). U ovu svrhu je korišćena jednostavna Clojure biblioteka pod nazivom \emph{Hiccup}\footnote{\url{https://github.com/weavejester/hiccup}}. Jedinstvena je po tome što nema statičke šablonske fajlove, već DOM stablo HTML dokumenta predstavlja preko Clojure struktura podataka, na primer \texttt{[:div \string{:id "header"\string} [:h1 "Header"]]}.
+\paragraph{Šabloni} Server generiše HTML stranice na upit pomoću mašine za šablone (\textit{template engine}). U ovu svrhu je korišćena jednostavna Clojure biblioteka pod nazivom \emph{Hiccup}\cite{hiccup}. Jedinstvena je po tome što nema statičke šablonske fajlove, već DOM stablo HTML dokumenta predstavlja preko Clojure struktura podataka, na primer \texttt{[:div \string{:id "header"\string} [:h1 "Header"]]}.
 
 \paragraph{Perzistencija}
 Kako korisnički zahtevi nameću, svi podaci o testovima, polaganju testova, registrovanim korisnicima itd. moraju se trajno negde smestiti, tj. moraju biti perzistentni. Standardna rešenja za perzistenciju predstavljaju relacione baze podataka. Autor se odlučio za \emph{PostgreSQL}\cite{postgres}, pre svega zbog postojećeg iskustva sa ovim RDBM sistemom.
 
 \paragraph{Objektno-relaciono mapiranje}
-ORM je strategija povezivanja stanja objekata u memoriji sa stanjem odgovarajućih objekata u relacionoj bazi. Iako su Clojure programima dostupne Java biblioteke koje predstavljaju industrijski standard (na primer, Hibernate), autor se odlučio za laganiju varijantu - za pristup bazi se koristi JDBC drajver za Postgres i mala Clojure biblioteka zvana \emph{YeSQL}\footnote{\url{https://github.com/krisajenkins/yesql}}. Ova biblioteka čita SQL skripte sa upitima, i za svaki upit pravi Clojure funkciju preko kojih je moguće proslediti imenovane parametre u upit, na sličan način na koji se to radi sa \texttt{NamedQuery} objektima u \textit{Java Persistence Language}-u. Nije razmatrana upotreba \textit{connection pooling}-a za konekcije ka bazi. Međutim, ukoliko se ukaže potreba za time, dodavanje takve biblioteke je prosto.
+ORM je strategija povezivanja stanja objekata u memoriji sa stanjem odgovarajućih objekata u relacionoj bazi. Iako su Clojure programima dostupne Java biblioteke koje predstavljaju industrijski standard (na primer, Hibernate), autor se odlučio za laganiju varijantu - za pristup bazi se koristi JDBC drajver za Postgres i mala Clojure biblioteka zvana \emph{YeSQL}\cite{yesql}. Ova biblioteka čita SQL skripte sa upitima, i za svaki upit pravi Clojure funkciju preko kojih je moguće proslediti imenovane parametre u upit, na sličan način na koji se to radi sa \texttt{NamedQuery} objektima u \textit{Java Persistence Language}-u. Nije razmatrana upotreba \textit{connection pooling}-a za konekcije ka bazi. Međutim, ukoliko se ukaže potreba za time, dodavanje takve biblioteke je prosto.
 
 \paragraph{Parsiranje logičkih jednačina} Mesto ručne izrade leksera i parsera za unošenje logičkih jednačina, autor se odlučio da iskoristi sjajnu Clojure biblioteku \emph{Instaparse}\cite{instaparse} za generaciju parsera bezkontekstnih gramatika. Ova biblioteka generiše parser na osnovu specifikacije gramatike u EBNF obliku. Pri tome podržava levu i desnu rekurziju i regularne izraze. Izlaz parsera je stablo parsiranja u obliku standardnog Clojure vektora. Instaparse može da parsira i dvosmislene gramatike, tako što vraća sekvencu svih mogućih stabala parsiranja.
 
-\paragraph{Ostalo} Za logovanje se koriste već dobro poznata rešenja u vidu \emph{Log4j} biblioteke i \emph{SLF4j} fasade. Konfiguracija sistema vrši se preko EDN (\textit{Extensible Data Notation}) datoteka i biblioteke zvane \emph{Immuconf}. EDN je zapravo podskup Clojure jezika, i predstavlja standard za serijalizaciju podataka. \textit{Cheshire} se koristi za konverziju Clojure podataka u JSON format, i obratno. Konačno, \textit{Postal} biblioteka se koristi za slanje email poruka sa lozinkom korisnicima nakon uspešne registracije.
+\paragraph{Ostalo} Za logovanje se koriste već dobro poznata rešenja u vidu \emph{Log4j} biblioteke i \emph{SLF4j} fasade. Konfiguracija sistema vrši se preko EDN (\textit{Extensible Data Notation}) datoteka i biblioteke zvane \emph{Immuconf}\footnote{\url{https://github.com/levand/immuconf}}. EDN je zapravo podskup Clojure jezika, i predstavlja standard za serijalizaciju podataka. \textit{Cheshire}\footnote{\url{https://github.com/dakrone/cheshire}} se koristi za konverziju Clojure podataka u JSON format, i obratno. Konačno, \textit{Postal}\footnote{\url{https://github.com/drewr/postal}} biblioteka se koristi za slanje email poruka sa lozinkom korisnicima nakon uspešne registracije.
 
 \subsection{Frontend tehnologije}
 
 \emph{AngularJS}\cite{angularjs} je korišćen kao \textit{de facto} standard za frontend JavaScript framework, u kombinaciji sa \emph{Bootstrap}\cite{bootstrap} CSS stilovima. Angular je uglavnom korišćen za validaciju obrazaca i POST zahteve ka serveru u pozadini, dok Bootstrap obezbeđuje podrazumevanu temu ugodnu za oko, ikonice, i fluidan \textit{layout} stranice koji automatski prilagođava stranicu tipu uređaja, bilo da je to desktop ili mobilni internet pregledač. HTML stranice su u skladu sa HTML5 standardom.
 
-Od Bootstrap-a se koristi samo CSS stil, a ostatak funkcionalnosti obezbeđuju Angular direktive za Bootstrap\footnote{\url{https://angular-ui.github.io/bootstrap/}}. Kako se ne koristi ni jQuery biblioteka (Angular dolazi sa svojom laganom alternativom, \textit{jqLite}), ovim se značajno štedi na veličini JavaScript koda koji pregledač učitava, a ne gubi se na funkcionalnosti.
+Od Bootstrap-a se koristi samo CSS stil, a ostatak funkcionalnosti obezbeđuju Angular direktive za Bootstrap\cite{ui-bootstrap}. Kako se ne koristi ni jQuery biblioteka (Angular dolazi sa svojom laganom alternativom, \textit{jqLite}), ovim se značajno štedi na veličini JavaScript koda koji pregledač učitava, a ne gubi se na funkcionalnosti.
 
-Za prikazivanje logičkih jednačina koristi se JS biblioteka \emph{KaTeX}\footnote{\url{https://github.com/Khan/KaTeX}}, koja omogućava efikasno renderovanje jednačina u \LaTeX formatu.
+Za prikazivanje logičkih jednačina koristi se JS biblioteka \emph{KaTeX}\cite{katex}, koja omogućava efikasno renderovanje jednačina u \LaTeX formatu.
 
 \subsection{Alat za kompajliranje i pakovanje aplikacije}
 
