--- a/doc/literatura.bib
+++ b/doc/literatura.bib
@@ -28,26 +28,57 @@
 }
 
 @online{ring,
-	title =			{Ring - Clojure HTTP server abstraction},
+	title =			{Ring},
+	subtitle =		{{Clojure} HTTP server abstraction},
 	url =				{https://github.com/ring-clojure/ring},
 	urldate =		"2016-09-20"
 }
 
 @online{angularjs,
-	title =			{AngularJS - Superheroic JavaScript MVW Framework},
+	title =			{AngularJS},
+	subtitle = 	{Superheroic JavaScript MVW Framework},
 	url =				{https://angularjs.org},
 	urldate =		"2016-09-21"
 }
 
+@online{ui-bootstrap,
+	title =			{Angular directives for Bootstrap},
+	url =				{https://angular-ui.github.io/bootstrap/},
+	urldate =		"2016-09-21"
+}
+
+@online{katex,
+	title =			{KaTeX},
+	subtitle =		{Fast math typesetting for the web},
+	url =				{https://github.com/Khan/KaTeX},
+	urldate =		"2016-09-21"
+}
+
 @online{bootstrap,
-	title =			{Bootstrap -The world's most popular mobile-first and responsive front-end framework},
+	title =			{Bootstrap},
+	subtitle =		{The world's most popular mobile-first and responsive front-end framework},
 	url =				{http://getbootstrap.com},
 	urldate =		"2016-09-21"
 }
 
 @online{instaparse,
-	title =			{Instaparse Context-free Grammer Parser Generator},
+	title =			{Instaparse},
+	subtitle = 	{Context-free Grammer Parser Generator},
 	url =				{https://github.com/Engelberg/instaparse},
+	urldate =		"2016-09-22"
+}
+
+@online{hiccup,
+	title =			{Hiccup},
+	subtitle =		{Fast library for rendering HTML in {Clojure}},
+	url =				{https://github.com/weavejester/hiccup},
+	urldate =		"2016-09-22"
+}
+
+@online{hiccup,
+	title =			{YeSQL},
+	subtitle =		{A {Clojure} library for using SQL},
+	url =				{https://github.com/krisajenkins/yesql},
 	urldate =		"2016-09-22"
 }
 
